--- a/style.css
+++ b/style.css
@@ -1,50 +1,34 @@
-#image-container{
-  display: flex;
-  justify-content: space-around;
-  background-color: black;
-  padding-top: 50px;
-  padding-left: 10px;
-  padding-right: 10px;
-}
+header {
+ text-align: center;
+ background-color: red;
+ }
+ #image-container
+{
+ display: flex;
+ justify-content: space-around;
+ padding: 10px;
+ background-color: black;
 
-box1{
-  height: 300px
-  width: 250px;
-  background-color: red;
-  float: left;
 }
-box2{
-  height: 300px
-  width: 250px;
-  background-color: orange;
-  float: left;
-  margin-left: 25px;
+#image1 {
+ height: 300px;
+ width: 300px;
+ background-color: red;
+ border-style: solid;
 }
-box3{
-  height: 300px
-  width: 250px;
-  background-color: pink;
-  float: right;
+#image2 {
+ height: 300px;
+ width: 300px;
+ background-color: red;
+ border-style: solid;
 }
-#firstImage{
-  height: 250px;
-  width:250px;
-  background-color: red;
+#image3 {
+ border-style: solid;
+ height: 300px;
+ width: 300px;
+ background-color: red;
 }
-
-#secondImage {
-  height: 250px;
-  width:250px;
-  background-color: black;
-}
-
-#thirdImage {
-  height: 250px;
-  width:250px;
-  background-color: pink;
-}
-
-header{
-  text-align: center;
-  background-color: red;
+footer {
+ background-color: red;
+ text-align: center;
 }
